# clibroker

./: .gitignore  AGENTS.md  README.md  client.example.yaml  config.example.yaml  pyproject.toml
src/clibroker/: __init__.py  __main__.py  app.py  audit.py  auth.py  config.py  file_sharing.py  mcp_server.py  middleware.py  models.py  policy.py  routes.py  runner.py
src/clibroker/client/: __init__.py  __main__.py  backend_http.py  config.py
tests/: conftest.py  test_api.py  test_client.py  test_file_sharing.py  test_mcp.py  test_policy.py  test_runner.py  test_security_fixes.py
